argocd/istio/02-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.kdvops.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  hosts:
  - "argocd.kdvops.com"
  gateways:
  - istio-system/kdvops-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
